     friends and ignores lists.
   * AmigaOS4: Minimum stack cookie to prevent stack overflow (patch #1107)
   * Additional screenmodes when SDL can't guess them (patch #1108)
   * Python AI works again. (bug #12955, bug #12913)
   * Fixed the :query command to work while in a multiplayer game, not only 
     when in chat (as /query)
   * Fixed invalid memory access with AMLAs (bug #12911)

Version 1.5.9:
 * Campaigns:
   * Descent into Darkness
     * In 'Endless Night', the enemy's gold now increases faster
   * The South Guard
     * Made 'Tides of War' a bit easier
   * Sceptre of Fire
     * Fix the player's keep disappearing in 'Gathering Materials'
     * New graphics for the Dwarvish Miner
   * Under the Burning Suns:
     * New base frames for the Desert Sentinel and Prowler
 * Graphics:
   * Removed the black background from some remaining old portraits
   * New portrait for Dwarf Thunderer, Dwarf Dragonguard, Human Pikeman, Dwarf
     Fighter, Dwarf Lord, Dwarf Guard, Mermaid Initiate, Dwarf Sentinel
   * Image-path functions:
     * All image path functions except RC() and TC() can now be stacked
       correctly and the order of precedence is from left to right. This
       may impact performance slightly.
     * New function, SCALE(W,H): scale down an image to the specified width
       (W) and height (H) for rendering. Negative or null (zero) numbers are
       ignored when scaling in the respective direction
   * Restructured portraits directory to be based on unit types rather than
     authors, added an authors file for recording portrait credits
 * Language and i18n:
   * updated translations: Catalan, Chinese (Traditional), Czech, Dutch,
     French, German, Hungarian, Italian, Polish, Slovak, Spanish, Valencian
 * Multiplayer:
   * Made "fog of war" and "random start time" default to on.
   * Fixed the Default Era quick leaders not getting the -5% HP reduction
   * Made leaders with 4 MP receive the quick trait also in Age of Heroes